플레이어별 로그 기능 추가 및 버전 1.2.0 업데이트